// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppBarComponent - src/navigation/main-header/appBar Snapshot should match snapshot 1`] = `
<div
  className="AppBarComponent-root-1"
>
  <header
    className="MuiPaper-root MuiAppBar-root MuiAppBar-positionStatic MuiAppBar-colorPrimary AppBarComponent-appBar-2 AppBarComponent-appBarEditor-4 MuiPaper-elevation0"
  >
    <div
      className="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
    >
      <div
        className="MuiGrid-root MuiGrid-container MuiGrid-align-items-xs-center MuiGrid-justify-content-xs-space-between"
      >
        <div
          className="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-true"
        >
          <div
            className="MuiGrid-root MuiGrid-item"
          >
            <a
              className="AppBarComponent-aImgStyling-12"
              href="/"
            >
              <img
                alt="Altinn logo"
                src="https://altinncdn.no/img/Altinn-logo-blue.svg"
              />
            </a>
          </div>
        </div>
        <div
          className="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-align-items-xs-center MuiGrid-justify-content-xs-flex-end MuiGrid-grid-xs-true"
        >
          
        </div>
      </div>
    </div>
  </header>
</div>
`;

exports[`AppBarComponent - src/navigation/main-header/appBar Snapshot should match snapshot and not render subHeader menu 1`] = `
<div
  className="AppBarComponent-root-1"
>
  <header
    className="MuiPaper-root MuiAppBar-root MuiAppBar-positionStatic MuiAppBar-colorPrimary AppBarComponent-appBar-2 AppBarComponent-appBarEditor-4 MuiPaper-elevation0"
  >
    <div
      className="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
    >
      <div
        className="MuiGrid-root MuiGrid-container MuiGrid-align-items-xs-center MuiGrid-justify-content-xs-space-between"
      >
        <div
          className="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-true"
        >
          <div
            className="MuiGrid-root MuiGrid-item"
          >
            <a
              className="AppBarComponent-aImgStyling-12"
              href="/"
            >
              <img
                alt="Altinn logo"
                src="https://altinncdn.no/img/Altinn-logo-blue.svg"
              />
            </a>
          </div>
        </div>
        <div
          className="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-align-items-xs-center MuiGrid-justify-content-xs-flex-end MuiGrid-grid-xs-true"
        >
          
        </div>
      </div>
    </div>
  </header>
</div>
`;

exports[`AppBarComponent - src/navigation/main-header/appBar Snapshot should match snapshot with no app or org 1`] = `
<div
  className="AppBarComponent-root-1"
>
  <header
    className="MuiPaper-root MuiAppBar-root MuiAppBar-positionStatic MuiAppBar-colorPrimary AppBarComponent-appBar-2 AppBarComponent-appBarDashboard-3 MuiPaper-elevation0"
  >
    <div
      className="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
    >
      <div
        className="MuiGrid-root MuiGrid-container MuiGrid-align-items-xs-center MuiGrid-justify-content-xs-space-between"
      >
        <div
          className="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-true"
        >
          <div
            className="MuiGrid-root MuiGrid-item"
          >
            <a
              className="AppBarComponent-aImgStyling-12"
              href="/"
            >
              <img
                alt="Altinn logo"
                src="https://altinncdn.no/img/Altinn-logo-blue.svg"
              />
            </a>
          </div>
        </div>
        <div
          className="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-align-items-xs-center MuiGrid-justify-content-xs-flex-end MuiGrid-grid-xs-true"
        >
          
        </div>
      </div>
    </div>
  </header>
</div>
`;

exports[`AppBarComponent - src/navigation/main-header/appBar Snapshot should match snapshot with subHeader and Publisere selection active 1`] = `
<div
  className="AppBarComponent-root-1"
>
  <header
    className="MuiPaper-root MuiAppBar-root MuiAppBar-positionStatic MuiAppBar-colorPrimary AppBarComponent-appBar-2 AppBarComponent-appBarEditor-4 MuiPaper-elevation0"
  >
    <div
      className="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
    >
      <div
        className="MuiGrid-root MuiGrid-container MuiGrid-align-items-xs-center MuiGrid-justify-content-xs-space-between"
      >
        <div
          className="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-true"
        >
          <div
            className="MuiGrid-root MuiGrid-item"
          >
            <a
              className="AppBarComponent-aImgStyling-12"
              href="/"
            >
              <img
                alt="Altinn logo"
                src="https://altinncdn.no/img/Altinn-logo-blue.svg"
              />
            </a>
          </div>
        </div>
        <div
          className="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-align-items-xs-center MuiGrid-justify-content-xs-flex-end MuiGrid-grid-xs-true"
        >
          
        </div>
      </div>
    </div>
  </header>
</div>
`;

exports[`AppBarComponent - src/navigation/main-header/appBar Snapshot should match snapshot with subHeader and Publisere selection active 2`] = `
<div
  className="AppBarComponent-root-1"
>
  <header
    className="MuiPaper-root MuiAppBar-root MuiAppBar-positionStatic MuiAppBar-colorPrimary AppBarComponent-appBar-2 AppBarComponent-appBarEditor-4 MuiPaper-elevation0"
  >
    <div
      className="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
    >
      <div
        className="MuiGrid-root MuiGrid-container MuiGrid-align-items-xs-center MuiGrid-justify-content-xs-space-between"
      >
        <div
          className="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-true"
        >
          <div
            className="MuiGrid-root MuiGrid-item"
          >
            <a
              className="AppBarComponent-aImgStyling-12"
              href="/"
            >
              <img
                alt="Altinn logo"
                src="https://altinncdn.no/img/Altinn-logo-blue.svg"
              />
            </a>
          </div>
        </div>
        <div
          className="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-align-items-xs-center MuiGrid-justify-content-xs-flex-end MuiGrid-grid-xs-true"
        >
          
        </div>
      </div>
    </div>
  </header>
</div>
`;
